    - vdc_db_query.php: some fixes at grab the data from custom table
        for the lead_id.
  * Add upstream Rev. 2870:
    - AST_VDauto_dial_FILL.pl: Fix for double-dialing issue on high
        volume systems.
  * Add upstream Rev. 2871:
    - AST_agent_days_detail.php: Fixed minor reporting bug.
    - Erlang_report.php: Modified to include disposition seconds in C report.

  [Axel Huizinga]
  * vdc_phonebook_display.php: Change to $_SERVER['SERVER_NAME'].


2.25.20
  [Jörg Frings-Fürst]
  * help.php: add missing '<'.
  * New DB-Schema 1527: (2017-054)
    - vicidial_list: Increase the size of the field alt_phone to 18.
    - WallBoardStat: add maxwaittime and Tmaxwaittime.
  * Add upstream Rev. 2856:
    - dispo_send_email.php: Added ALL-STATUSES option and called_count_trigger
      option.
  * Add upstream Rev. 2857:
    - dispo_send_email.php: Added additional_notes option and email attachments
      options(1-5).
  * AST_CRON_WallBoard3_gen.php:
    - Add maxwaittime.
  * Wall_js.php:
    - Add maxwaittime.
    - Add AnzeigeNull with default 'n'.
  * WallBoard3.php:
    -  Add AnzeigeNull with default 'n'.
  * Release 2.25.20 2017-11-21.

2.25.19

  [Jörg Frings-Fürst]
  * AST_CRON_WallBoard3_gen.php:
    - Typo InGroup Search.
    - Add function GetServicelevel.
    - Replace mysqli_fetch_row with mysqli_fetch_array.
  * New DB-Schema 1526: (2017-053)
    - Add servicelevel_* to system_settings.
  * admin.php:
    - Add servicelevel_* to system_settings.
    - Rename Git Release to Patch-Level.
  * help.php:
    - Add help for servicelevel.
    - Add missing help for dectect 3way calls.
  * Add upstream Rev. 2855:
    - functions.php,
      vdc_db_query.php,
      vdc_form_display.php,
      admin_lists_custom.php,
      help.php: Added code for duplicate custom fields.
  * Release 2.25.19 2017-11-18.

2.25.18

  [Jörg Frings-Fürst]
  * ADMIN_keepalive_ALL.pl: Add allow=ulaw and allow=slin to ASTloop,
      ASTblind and ASTplay (2017-048).